Bug fix: main board navigation button is visible at correct time, even when player goes back from main board to player board

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -226,3 +226,7 @@ svg {
 .main-board-buttons {
     visibility: hidden;
 }
+
+#go-to-main-board-button {
+  visibility: hidden;
+}
